modified home page

--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="/styles/index.css">
+
 </head>
 
 <body>
-    
+    <div class="navbar">
+    <h1>Scribbler</h1>
+    </div>
 </body>
 
 </html>
