--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,21 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="/styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
+<body >
+    <div class="navbar">  
+       <div><h1>ScriBBler</h1>
+        <p>Explore, Imagine, Create</p></div>
+        
+        <div class="navbutton"><button>Sign Up</button>
+            <button>Sign In</button></div>
+
+    </div>
     
 </body>
 
