--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,19 @@
             </div>
             <div class="model-body">
              <form action=""></form>
-             <input type="text" required placeholder="Enter your name">
+             <label for="name">Name</label>
+             <input type="text" name="Name" placeholder="Enter your name" required>
+             <label for="username">Username</label>
+             <input type="text" name="Username" placeholder="Enter your username" required>
+             <label for="name">Password</label>
+             <input type="password" name="password" placeholder="Enter your password" required>
+             <label for="password">Confirm Password</label>
+             <input type="password" name="password" placeholder="Re-enter your password" required>
+             
             </div>
-            <div class="model-footer"></div>
+            <div class="model-footer">
+                <button>Sign Up</button>
+            </div>
         </div>
         
     </div>
