--- a/html/index.html
+++ b/html/index.html
@@ -24,19 +24,19 @@
                 <button class="close">&times;</button>
             </div>
             <div class="model-body">
-             <form action=""></form>
+             <form action="" id="signupForm"></form>
              <label for="name">Name</label>
-             <input type="text" name="Name" placeholder="Enter your name" required>
-             <label for="username">Username</label>
-             <input type="text" name="Username" placeholder="Enter your username" required>
-             <label for="name">Password</label>
-             <input type="password" name="password" placeholder="Enter your password" required>
+             <input type="text" id="name" name="name" placeholder="Enter your name" required>
+             <label for="Username">Username</label>
+             <input type="text" id="Username" name="Username" placeholder="Enter your username" required>
+             <label for="password">Password</label>
+             <input type="password" id="password" name="password" placeholder="Enter your password" required>
              <label for="password">Confirm Password</label>
-             <input type="password" name="password" placeholder="Re-enter your password" required>
+             <input type="password" id="Re-enter" name="Re-enter" placeholder="Re-enter your password" required>
              
             </div>
             <div class="model-footer">
-                <button>Sign Up</button>
+                <button type="submit">Sign Up</button>
             </div>
         </div>
         
