made some modification

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
@@ -21,7 +22,7 @@
         <div class="model-content">
             <div class="model-header">
                 <h2>Get Started</h2>
-                <button class="close">&times;</button>
+                <button class="close"><i class="fa fa-times" aria-hidden="false"></i></button>
             </div>
             <div class="model-body">
              <form action="" id="signupForm"><label for="name">Name</label>
@@ -42,7 +43,7 @@
         <div class="model-content">
             <div class="model-header">
                 <h2>Welcome Back!</h2>
-                <button class="close">&times;</button>
+                <button class="close"><i class="fa fa-times" aria-hidden="false"></i></button>
             </div>
             <div class="model-body">
                 <form action="" id="signinForm">
@@ -60,7 +61,7 @@
         <div id="createPost" class="model-content">
             <div class="model-header">
                 <h2>Pen Your Post</h2>
-                <button class="close">&times;</button>
+                <button class="close"><i class="fa fa-times" aria-hidden="false"></i></button>
             </div>
             <div class="model-body">
                 <form action="" id="createPostForm">
