--- a/html/postslist.html
+++ b/html/postslist.html
@@ -3,12 +3,21 @@
 
 <head>
     <!-- TODO: Include Font Awesome file here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/postslist.css">
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- TODO: Include code for header here -->
-
+    <div class="navbar">  
+        <div><h1>ScriBBler</h1>
+         <p>Explore, Imagine, Create</p></div>
+         
+         <div class="navbutton"><button id="signupbutton">Sign Up</button>
+             <button id="signinbutton">Sign In</button></div>
+     </div>
     <!-- ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code. You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. -->
 
     <!-- list of all posts starts here -->
@@ -125,6 +134,7 @@
 
     </div>
     <!-- list of all posts ends here -->
+    <script src="/scripts/postslist.js"></script>
 </body>
 
 </html>
