--- a/html/postslist.html
+++ b/html/postslist.html
@@ -4,7 +4,7 @@
 <head>
     <!-- TODO: Include Font Awesome file here -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/styles/postslist.css">
+    <link rel="stylesheet" href="/Scribbler-Project/styles/postslist.css">
     <!-- TODO: Include Google Fonts file here -->
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
 </head>
