--- a/html/postslist.html
+++ b/html/postslist.html
@@ -134,7 +134,7 @@
 
     </div>
     <!-- list of all posts ends here -->
-    <script src="/scripts/postslist.js"></script>
+    <script src="/Scribbler-Project/scripts/postslist.js"></script>
 </body>
 
 </html>
